[package]
name = "superfuse"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.45", features = ["derive"] }
directories = "=6.0.0"
dotenvy = "0.15.7"
fuser = "0.17.0"
handlebars = "6.3.2"
libc = "0.2.183"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
superposition_provider = "0.99.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
