[package]
name = "superfuse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
directories = "=6.0.0"
dotenvy = "0.15.7"
fuser = "0.17.0"
handlebars = "6.3.2"
libc = "0.2.183"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
superposition_provider = "0.99.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
